fix width on small screen

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -657,6 +657,7 @@ a {
 	}
 	.sticky {
 		position: static !important;
+		width: 100% !important;
 	}
 	.sticky-wrap {
 		height: auto !important;
